# candado

./: Cargo.toml  README.md  changelog.md  install.sh
.github/workflows/: pipeline.yml
src/: encryption.rs  entry.rs  generators.rs  lib.rs  storage.rs  tui.rs
